<resources>
    <string name="app_name">gastoviagem-app</string>

    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="distancia">Distância</string>

    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>

    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="seu_gasto_total_ser_de">Seu gasto total será de:</string>
    <string name="valor_total">R$ 0</string>
    <string name="calcular">Calcular</string>

</resources>